--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <script type="text/javascript" src="js/script.js">  </script>
   
 </head>
-
 <body >
   <nav class="nav container">
     <div class="hamburg">
@@ -19,8 +18,6 @@
             <img src="images/menu/baseline_menu_white_18dp.png" alt="Menu Icone" />
         </label>
     </div>
-    
-
     <ul class="ul_menu_rigth" id="menu_right">
         <li><a href="#section1">Inicio</a></li>
         <li><a href="#section2">Sobre</a></li>
@@ -29,18 +26,19 @@
         <li><a href="#section5"></a></li>
     </ul>
 </nav>
-<section class="container" >
-    <div class="main ">           
-        <img  class="imagem__topo container" src="images/image 2maratona.svg"   alt="Pessoa Digitando em notebook">
-        <div >
-          <ul class="ul_menu_top container" id="menu_top">
-          <li><a href="#inicio">Inicio</a></li>
+<section class="container classe__botton" >
+  <header>
+    <img  class="imagem__topo container" src="images/image 2maratona.svg"   alt="Pessoa Digitando em notebook">
+    <nav id="menu" >
+      <ul class="container">
+          <li><a href="#">Inicio</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#Programação">Programação</a></li>
           <li><a href="#Localização">Localização</a></li>
-          <li><a href="#" style="padding:15px; background-color: #E74C3C; border-radius: 5px">Inscriçao</a></li>  
+          <li><a href="#" class="classe_botao_inscricao">Inscriçao</a></li>  
       </ul>
-        </div>
+    </nav>
+    <div class="main ">           
         <div class="main_text">
             <h1>XXIII MARATONA SBC DE PROGRAMAÇÃO</h1>                
         </div>
@@ -57,11 +55,9 @@
           <h1>Inscrição</h1>                
       </div>
     </div>
+  </header>
 </section>
-
- 
-
-
+<section>
   <main class="container">
     <div class=" titulo_t1">
       <h1 >Sobre</h1>
@@ -135,6 +131,8 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3421.0550513188036!2d-60.1196911356474!3d-12.704258299157033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93b96be3e6498bd7%3A0x66ce4f62185d43bb!2sInstituto%20Federal%20de%20Rond%C3%B4nia%20-%20Campus%20Vilhena!5e1!3m2!1spt-BR!2sbr!4v1569802184873!5m2!1spt-BR!2sbr" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
   </main>
+</section>
+  
   <div>
   <form id="contato" class="container">
       <h1 class="texto_contato"> contato </h1>
